--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -65,3 +65,9 @@ processing: "🔍 Processing '{word}'..."
 success: "✅ '{word}' added successfully to Anki!"
 error: "🚫 Error processing '{word}': {error}"
 anki_connection_error: "⚠️ Cannot connect to Anki: {error}"
+
+# --- DECK COMMAND MESSAGES ---
+no_deck_name_provided: "❌ ERROR: You must specify a deck name. Correct usage: /deck _[DeckName]_"
+no_deck selected: "❌ ERROR: No deck selected. Use /deck _[DeckName]_ first."
+deck_not_found: "❌ Oops! Deck _'{deck}'_ doesn’t exist in Anki. Check spelling and capitalization."
+deck_set_success: "🎉 *Deck selected!* ✔️\nYou are now using: _{deck}_"
