feat!: add German language, full refactor, fix bugs

--- a/locales/de.yaml
+++ b/locales/de.yaml
@@ -75,6 +75,11 @@ processing: "🔍 Verarbeite '{word}'..."
 success: "✅ '{word}' erfolgreich zu Anki hinzugefügt!"
 error_processing_word: "🚫 Fehler beim Verarbeiten von '{word}': {error}"
 anki_connection_error: "⚠️ Verbindung zu Anki fehlgeschlagen: {error}"
+anki_connection_failed: "❌ Anki-Verbindung fehlgeschlagen: {error}"
+word_not_exists: "❌ Karte für '{word}' kann nicht erstellt werden, es existiert nicht"
+no_valid_words_found: "❌ Keine gültigen Wörter im Text gefunden."
+invalid_language_input: "❌ Bitte gib eine gültige Sprache ein!"
+translation_language_set: "✅ Übersetzungssprache auf '{language}' gesetzt"
 
 file_unsupported_format: "❌ Nicht unterstütztes Dateiformat. Unterstützt: .xlsx, .csv, .tsv, .txt"
 file_empty: "❌ Die Datei ist leer oder enthält keine gültigen Wörter."
