--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -77,6 +77,11 @@ processing: "🔍 Processing '{word}'..."
 success: "✅ '{word}' added successfully to Anki!"
 error_processing_word: "🚫 Error processing '{word}': {error}"
 anki_connection_error: "⚠️ Cannot connect to Anki: {error}"
+anki_connection_failed: "❌ Anki connection failed: {error}"
+word_not_exists: "❌ Cannot create card for '{word}' it doesn't exist"
+no_valid_words_found: "❌ No valid words found in the text."
+invalid_language_input: "❌ Please enter a valid language!"
+translation_language_set: "✅ Translation language set to: {language}"
 
 file_unsupported_format: "❌ Unsupported file format. Supported: .xlsx, .csv, .tsv, .txt"
 file_empty: "❌ The file is empty or contains no valid words."
