--- a/locales/fr.yaml
+++ b/locales/fr.yaml
@@ -75,6 +75,11 @@ processing: "🔍 Traitement de '{word}'..."
 success: "✅ '{word}' ajoutée avec succès à Anki !"
 error_processing_word: "🚫 Erreur lors du traitement de '{word}' : {error}"
 anki_connection_error: "⚠️ Impossible de se connecter à Anki : {error}"
+anki_connection_failed: "❌ Échec de la connexion à Anki : {error}"
+word_not_exists: "❌ Impossible de créer la carte pour '{word}' elle n'existe pas"
+no_valid_words_found: "❌ Aucun mot valide trouvé dans le texte."
+invalid_language_input: "❌ Veuillez entrer une langue valide !"
+translation_language_set: "✅ Langue de traduction définie sur : {language}"
 
 file_unsupported_format: "❌ Format de fichier non pris en charge. Pris en charge : .xlsx, .csv, .tsv, .txt"
 file_empty: "❌ Le fichier est vide ou ne contient aucun mot valide."
