--- a/locales/it.yaml
+++ b/locales/it.yaml
@@ -74,6 +74,11 @@ processing: "🔍 Elaborazione '{word}'..."
 success: "✅ '{word}' aggiunta con successo ad Anki!"
 error_processing_word: "🚫 Errore durante l'elaborazione di '{word}': {error}"
 anki_connection_error: "⚠️ Impossibile connettersi ad Anki: {error}"
+anki_connection_failed: "❌ Connessione ad Anki fallita: {error}"
+word_not_exists: "❌ Impossibile creare la carta per '{word}' non esiste"
+no_valid_words_found: "❌ Nessuna parola valida trovata nel testo."
+invalid_language_input: "❌ Inserisci una lingua valida!"
+translation_language_set: "✅ Lingua di traduzione impostata su: {language}"
 
 file_unsupported_format: "❌ Formato file non supportato. Supportati: .xlsx, .csv, .tsv, .txt"
 file_empty: "❌ Il file è vuoto o non contiene parole valide."
